# hermes-stream

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/database/: schema.sql
backend/hermes/: __init__.py  engine_client.py  main.py
backend/hermes/api/: __init__.py  websocket.py
backend/hermes/plugins/: __init__.py  executor.py  protocol.py  registry.py
backend/hermes/workers/: __init__.py  monitoring_worker.py
backend/tests/: conftest.py  test_execution_snapshot.py  test_monitoring_engine.py  test_pipeline_advanced_scenarios.py  test_pipeline_composition.py  test_pipeline_e2e_flow.py  test_pipeline_step_scenarios.py  test_plugin_protocol.py  test_plugin_registry.py  test_processing_orchestrator.py  test_recipe_engine.py  test_reprocessing.py  test_scenarios.py  test_stage_stop_enforcement.py  test_work_item_lifecycle.py
backend/tests/chaos/: test_stage_restart_semantics.py
backend/tests/collection/: test_failure_handling.py  test_folder_traversal.py  test_ftp_collector_e2e.py  test_kafka_collection.py
backend/tests/e2e/: __init__.py  conftest.py  test_activation_failover.py  test_operator_pipeline_flow.py  test_reprocess_from_failed_stage.py  test_stub_mode_rejected_in_production.py
backend/tests/migrations/: test_stage_runtime_states_migration.py  test_stage_runtime_states_migration_sql.py
backend/tests/parity/: ftp_parity_corpus.json  test_db_writer_integrity_contracts.py  test_ftp_runtime_parity.py  (+1 more)
backend/vessel/: engine_client.py  main.py
(+278 files in other folders)
